done: all demo slider

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 	<!-- End mas demo section -->
 
 	<div class="mas-demo-slider-section section-padding">
-		<div class="mas-demo-slider">
+		<div class="mas-demo-slider1">
 			<div class="mas-demo-slider-item">
 				<img src="assets/images/home1.png" alt="">
 			</div>
@@ -139,7 +139,7 @@
 
 
 	<div class="mas-demo-slider-section section-padding">
-		<div class="mas-demo-slider">
+		<div class="mas-demo-slider2" dir="rtl">
 			<div class="mas-demo-slider-item">
 				<img src="assets/images/home1.png" alt="">
 			</div>
@@ -186,6 +186,32 @@
 				<img src="assets/images/testimonial.png" alt="">
 			</div>
 		</div>
+	</div>
+
+	<div class="mas-demo-slider-section section-padding">
+		<div class="container">
+			<div class="mas-demo-slider3">
+				<div class="mas-demo-slider-item">
+					<img src="assets/images/home1.png" alt="">
+				</div>
+				<div class="mas-demo-slider-item">
+					<img src="assets/images/home2.png" alt="">
+				</div>
+				<div class="mas-demo-slider-item">
+					<img src="assets/images/home3.png" alt="">
+				</div>
+
+				<div class="mas-demo-slider-item">
+					<img src="assets/images/404.png" alt="">
+				</div>
+
+
+			
+
+				
+			</div>
+		</div>
+		
 	</div>
 
 
